fixing nav links on mobile view

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -257,7 +257,9 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
    Media Queries
    ========================================================================== */
 
-@media (min-width: 768px) { }
+@media (min-width: 768px) { 
+
+}
 
 @media (min-width: 992px) { }
 
@@ -272,10 +274,8 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
     margin-bottom: 50px;
   }
 
-  .center .navbar .nav, 
-  .center .navbar .nav > li,
-  .nav > li {
-    position: relative;
-    display: block;
+  .navbar-inverse .navbar-nav > li > a{
+    font-size: 14px;
   }
+
 }
